# shijimi_math

./: CMakeLists.txt  Doxyfile  README.md
docs/: addable_8hpp.html  addable_8hpp.js  addable_8hpp_source.html  annotated.html  annotated_dup.js  auto__diff_8hpp.html  auto__diff_8hpp.js  auto__diff_8hpp_source.html  basic__types_8hpp.html  basic__types_8hpp.js  basic__types_8hpp_source.html  classes.html  classtcb_1_1rational-members.html  classtcb_1_1rational.html  classtcb_1_1rational.js  concepts_8hpp.html  concepts_8hpp_source.html  config_8hpp.html  config_8hpp.js  config_8hpp_source.html  dir_1451c16d86be2b3669f58a66b9d06fb3.html  dir_1451c16d86be2b3669f58a66b9d06fb3.js  dir_7424492efa7cbba1a4a81b7f238433ab.html  dir_7424492efa7cbba1a4a81b7f238433ab.js  dir_b33144a8bbcb2a5ce8c307b4020e7634.html  dir_b33144a8bbcb2a5ce8c307b4020e7634.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_f7c319acabacd30bb76202b75ac37d6f.html  dir_f7c319acabacd30bb76202b75ac37d6f.js  dir_fd57d34edc881eed6bf6e32ef85eb567.html  dir_fd57d34edc881eed6bf6e32ef85eb567.js  dividable_8hpp.html  dividable_8hpp.js  dividable_8hpp_source.html  external_2tcb_2rational_8hpp_source.html  field_8hpp.html  field_8hpp.js  field_8hpp_source.html  files.html  (+40 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+14 more)
example/: CMakeLists.txt  auto_diff.cpp
test/: CMakeLists.txt
(+12 files in other folders)
